--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "puzzle-ai",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "A flexible CLI tool for code generation and scaffolding that integrates with LLMs to automate common development tasks",
   "bin": {
     "puzzle": "./src/run.js"
@@ -31,6 +31,8 @@
     "start": "node src/run.js"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "fast-glob": "^3.3.2",
     "inquirer": "^12.1.0",
     "node": "^20.11.1",
