--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "puzzle-ai",
-  "version": "0.9.4",
+  "version": "0.9.5",
   "description": "A flexible CLI tool for code generation and scaffolding that integrates with LLMs to automate common development tasks",
   "bin": {
     "puzzle": "./src/run.js",
     "puzzle-jetbrains-install": "./src/jetbrainsHook.js",
-    "puzzle-aider": "./src/run.js",
+    "puzzle-aider": "./src/puzzleAider.js",
     "puzzle-proxy": "src/chat.js"
   },
   "private": false,
